<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nameEnter"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvRelation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relation" />

    <EditText
        android:id="@+id/etRelation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etRelation"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/titleEnter"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Address" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numberEnter"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/displayPic"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btnSetImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set Image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Insert" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Show List" />
    </LinearLayout>

</LinearLayout>