<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editName"
        android:textSize="20sp"
        android:textColor="#40e0d0"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvEditRelation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editRelation"
        android:textSize="20sp"
        android:textColor="#40e0d0"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEditRelation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTitle"
        android:textSize="20sp"
        android:textColor="#40e0d0"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvEditAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editAddress"
        android:textSize="20sp"
        android:textColor="#40e0d0"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEditAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvEditNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editNumber"
        android:textSize="20sp"
        android:textColor="#40e0d0"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEditNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Update"
            android:backgroundTint="#40e0d0"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete"
            android:backgroundTint="#40e0d0"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:backgroundTint="#40e0d0"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivCall"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/phone" />

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="23dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/gps" />

        <ImageView
            android:id="@+id/ivMessage"
            android:layout_width="29dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/msg" />
    </LinearLayout>

</LinearLayout>